--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,34 @@
 
-/* 
-
-    You can write your own styles here...
+h1 {
+    font-size: 70px; 
+    font-family: Arial;   
+    }
+    
+    .jumbotron {
+     padding-bottom: 90px;
+     padding-left: 10px;
+    
+    }
+     
+   
     
     
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
+    .cardOne-img-top{
+        height: 190px;
+        max-width: 300px;
+    }
     
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+    .card_container {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    /* 
+        You can write your own styles here...
+        
+        
+        ...Or you can use the import command to include 
+        other sylesheets into your bunde as well, e.j:
+        
+        import 'relative/path/to/stylesheet.scss';
+    */
